--- a/src/main/resources/templates/mailVerifyCode.html
+++ b/src/main/resources/templates/mailVerifyCode.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>index</title>
+    <title>Jiafly</title>
 </head>
 <body>
 <div style="background-color:#ECECEC; padding: 35px;">
@@ -46,7 +46,7 @@
                         <div style="padding:10px 10px 0;border-top:1px solid #ccc;color:#747474;margin-bottom:20px;line-height:1.3em;font-size:12px;">
                             <p>
                             <center>[www.jiafly.com]</center>
-                            </p><p>*此为系统邮件，请勿回复！<br>
+                            </p><p>*本邮件由系统自动发送，请勿直接回复！<br>
                             *若您最近未使用本电子邮件新建 Jiafly 账户，您可以放心地忽略此邮件。
                         </p>
                             <!--                            <p>?***</p>-->
